--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-typography": "^5.13.0",
     "gatsby-remark-copy-linked-files": "6.13.0",
     "gatsby-remark-images": "^7.13.0",
+    "gatsby-remark-mermaid": "^5.0.0",
     "gatsby-remark-prismjs": "^7.13.0",
     "gatsby-remark-responsive-iframe": "^6.13.0",
     "gatsby-remark-smartypants": "^6.13.0",
@@ -21,6 +22,13 @@
     "gatsby-transformer-remark": "^6.13.0",
     "gatsby-transformer-sharp": "^5.13.0",
     "prismjs": "^1.29.0",
+    "prosemirror-commands": "^1.7.1",
+    "prosemirror-history": "^1.5.0",
+    "prosemirror-keymap": "^1.2.3",
+    "prosemirror-model": "^1.25.4",
+    "prosemirror-state": "^1.4.4",
+    "prosemirror-transform": "^1.11.0",
+    "prosemirror-view": "^1.41.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
